/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id "java"
    id "application"
    id "org.openjfx.javafxplugin" version "0.1.0"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

javafx {
    version = "26"
    modules = [ "javafx.controls", "javafx.web" ]
}

application {
    // Define the main class for the application.
    mainClass = 'blue.rose.App'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    implementation "org.openjfx:javafx-controls:26"
    implementation "org.openjfx:javafx-web:26"
}

// tasks.named("distTar").configure { enabled = false }
// tasks.named("distZip").configure { enabled = false }
// tasks.named("startScripts").configure { enabled = false }

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.named("run", JavaExec) {
    doFirst {
        def nativeDir = file("$buildDir/NativeMain/RuntimeLibs/windows/x86-64/shared")

        jvmArgs += [
            "-Djava.library.path=${nativeDir.absolutePath}",
            "--module-path", classpath.asPath,
            "--add-modules", "javafx.controls,javafx.web"
        ]

        environment "PATH", nativeDir.absolutePath + ";" + System.getenv("PATH")
    }
}
